Close the polygon element.

--- a/source/_web-template/web-template.html
+++ b/source/_web-template/web-template.html
@@ -399,7 +399,7 @@ Kobayashi Issa
 <div id="bookmark">
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 40 80" xml:space="preserve">
   <g>
-    <polygon points="0,0 0,80 20,70 40,80 40,0"
+    <polygon points="0,0 0,80 20,70 40,80 40,0"/>
   </g>
 </svg>
 </div>
