Add an empty alt attribute to make HTML validators happy.
Those images are worthy of a proper alternative text, though. Drafting that text
is left as an exercise for the reader. No, the author. ☺️

--- a/source/_web-template/web-template.html
+++ b/source/_web-template/web-template.html
@@ -391,7 +391,7 @@ Kobayashi Issa
   <p>Basically, <small>everything works</small></p>
 </div>
 
-<img class="cover" src="{{ cover_image }}" />
+<img class="cover" src="{{ cover_image }}" alt="" />
 {{ title_html }}
 {{ web_book_body_html }}
 <p class="last-page"></p>
