more README edits; fix to convert.rb script

--- a/source/_web-template/web-template.html
+++ b/source/_web-template/web-template.html
@@ -179,7 +179,7 @@ Kobayashi Issa
                                   return heading.getAttribute("id") == editedAnchor;
                                 } );
 
-    anchoredHeading.scrollIntoViewIfNeeded();
+    anchoredHeading.scrollIntoView();
 
     let wherePageEdgeShouldBe = ( window.innerWidth - bookElement.getBoundingClientRect().width ) / 2.0;
     let offset = anchoredHeading.getBoundingClientRect().x - wherePageEdgeShouldBe;
