--- a/source/_web-template/web-template.html
+++ b/source/_web-template/web-template.html
@@ -219,7 +219,7 @@ Kobayashi Issa
 
     anchoredHeading.scrollIntoView();
 
-    let wherePageEdgeShouldBe = ( window.innerWidth - getRect(bookelement).width ) / 2.0;
+    let wherePageEdgeShouldBe = ( window.innerWidth - getRect(bookElement).width ) / 2.0;
     let offset = getRect(anchoredHeading).x - wherePageEdgeShouldBe;
 
     document.body.scrollLeft += offset;
